# mlflow_model_manage

./: .gitignore  README.md  databricks.yml  main.py  project_config_teen_addiction.yml  pyproject.toml
notebook/: code.ipynb
resources/: model_deployment.yml
scripts/: train_pipeline.py
src/: config.py
src/data/: load.py  preprocess.py  upload_initial_data.py
src/model/: evaluate.py  logging_register.py  train.py
src/serving/: call_endpoint.py  serve_endpoint.py
src/utils/: feature_label.py  spark_utils.py
tests/: test_load.py
